--- a/index.html
+++ b/index.html
@@ -748,6 +748,16 @@
           >
             <li class="px-1">
               <a
+                href="mailto:eliahmbwilo7@gmail.com"
+                class="text-decoration-none"
+                target="_blank"
+                rel="nofollow noreferrer"
+              >
+                <i class="bi-envelope" style="font-size: 1.2rem"></i
+              ></a>
+            </li>
+            <li class="px-1">
+              <a
                 href=""
                 class="text-decoration-none"
                 target="_blank"
@@ -892,54 +902,6 @@
                 </li>
               </ul>
             </blockquote>
-            <br />
-            <section>
-              <ul
-                class="horizontal-list text-primary p-0 m-0"
-                style="list-style-type: none"
-              >
-                <li class="px-1">
-                  <a
-                    href=""
-                    class="text-decoration-none"
-                    target="_blank"
-                    rel="nofollow noreferrer"
-                  >
-                    <i class="bi-facebook" style="font-size: 2rem"></i
-                  ></a>
-                </li>
-                <li class="px-1">
-                  <a
-                    href=""
-                    class="text-decoration-none"
-                    target="_blank"
-                    rel="nofollow noreferrer"
-                  >
-                    <i class="bi-twitter" style="font-size: 2rem"></i>
-                  </a>
-                </li>
-                <li class="px-1">
-                  <a
-                    href=""
-                    class="text-decoration-none"
-                    target="_blank"
-                    rel="nofollow noreferrer"
-                  >
-                    <i class="bi-instagram" style="font-size: 2rem"></i>
-                  </a>
-                </li>
-                <li class="px-1">
-                  <a
-                    href=""
-                    class="text-decoration-none"
-                    target="_blank"
-                    rel="nofollow noreferrer"
-                  >
-                    <i class="bi-linkedin" style="font-size: 2rem"></i>
-                  </a>
-                </li>
-              </ul>
-            </section>
           </amp-layout>
         </div>
         <!-- profile panel -->
@@ -1415,63 +1377,44 @@
               </div>
               <div class="resume-item">
                 <h4 class="text-primary uppercase">
-                  SmartStock Company Limited
+                  University of Dar es Salaam
                 </h4>
                 <caption>
-                  Software Developer
+                  Bachelor of Science in Computer Science
                 </caption>
                 <p>
-                  <em>Dec, 2019 - Present</em>
+                  <em>September, 2016 - 2019</em>
                   &ensp;|&ensp;
                   <small>Dar es Salaam</small>
                 </p>
                 <dl>
-                  <dd>
-                    Design and implementation of web and mobile applications.
-                  </dd>
+                  <dd>GPA 4.1.</dd>
                 </dl>
               </div>
               <div class="resume-item">
-                <h4 class="text-primary uppercase">DHIS Tanzania</h4>
+                <h4 class="text-primary uppercase">Kibaha Secondary School</h4>
                 <caption>
-                  Software Developer
+                  A-Level | ACSEE
                 </caption>
                 <p>
-                  <em>July, 2018 - September, 2018</em>
+                  <em>2014 - 2016</em>
                   &ensp;|&ensp;
-                  <small>Dar es Salaam</small>
+                  <small>Pwani</small>
                 </p>
                 <dl style="line-height: 24px">
-                  <dd>
-                    Design and implementation of web APIs for frontend
-                    applications.
-                  </dd>
+                  <dd>Physics, Chemistry and Mathematics.</dd>
                 </dl>
               </div>
               <div class="resume-item">
-                <h4 class="text-primary uppercase">Smart Codes</h4>
+                <h4 class="text-primary uppercase">Thomas More Machrina</h4>
                 <caption>
-                  Front-End Developer, Back-End Developer
+                  O-Level | CSEE
                 </caption>
                 <p>
-                  <em>July, 2017 - September, 2017</em>
+                  <em>2011 - 2014</em>
                   &ensp;|&ensp;
                   <small>Dar es Salaam</small>
                 </p>
-                <dl style="line-height: 24px">
-                  <dd>
-                    Realization and creation of static and dynamic interactive
-                    web pages.
-                  </dd>
-                  <dd>
-                    Developed back end applications in php and java for web
-                    systems and mobile apps.
-                  </dd>
-                  <dd>
-                    Creation of software and tools to simplify the internal
-                    workings at smart codes, and for clients.
-                  </dd>
-                </dl>
               </div>
             </section>
           </amp-layout>
@@ -1503,6 +1446,16 @@
                     class="horizontal-list p-0 m-0"
                     style="list-style-type: none"
                   >
+                    <li class="px-1">
+                      <a
+                        href="mailto:eliahmbwilo7@gmail.com"
+                        class="text-decoration-none"
+                        target="_blank"
+                        rel="nofollow noreferrer"
+                      >
+                        <i class="bi-envelope" style="font-size: 1.4rem"></i
+                      ></a>
+                    </li>
                     <li class="px-1">
                       <a
                         href=""
@@ -1548,16 +1501,16 @@
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 flex items-stretch mb-3">
                 <div class="card shadow bg-secondary">
-                  <i class="bx bx-envelope"></i>
+                  <i class="bi-envelope"></i>
                   <h3>Email Me</h3>
-                  <p>contact@example.com</p>
+                  <p>eliahmbwilo7@gmail.com</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 flex items-stretch mb-3">
                 <div class="card shadow bg-secondary">
-                  <i class="bx bx-phone-call"></i>
+                  <i class="bi-telephone"></i>
                   <h3>Call Me</h3>
-                  <p>+1 5589 55488 55</p>
+                  <p>+255 743 127 744</p>
                 </div>
               </div>
             </div>
