--- a/index.html
+++ b/index.html
@@ -1501,14 +1501,20 @@
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 flex items-stretch mb-3">
                 <div class="card shadow bg-secondary">
-                  <i class="bi-envelope"></i>
+                  <i
+                    class="bi-envelope-fill"
+                    style="font-size: 2rem; color: #ffbb2c"
+                  ></i>
                   <h3>Email Me</h3>
                   <p>eliahmbwilo7@gmail.com</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 flex items-stretch mb-3">
                 <div class="card shadow bg-secondary">
-                  <i class="bi-telephone"></i>
+                  <i
+                    class="bi-telephone-fill"
+                    style="font-size: 2rem; color: #e80368"
+                  ></i>
                   <h3>Call Me</h3>
                   <p>+255 743 127 744</p>
                 </div>
