--- a/index.html
+++ b/index.html
@@ -1433,14 +1433,20 @@
             <div class="row between-xs">
               <div class="col-xs-12 col-sm-6 col-md-6 flex items-stretch mb-3">
                 <div class="card shadow bg-secondary">
-                  <i class="bx bx-map"></i>
+                  <i
+                    class="bi-alt-fill"
+                    style="font-size: 2rem; color: #ffa76e"
+                  ></i>
                   <h3>My Address</h3>
                   <p>A108 Adam Street, New York, NY 535022</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 flex items-stretch mb-3">
                 <div class="card shadow bg-secondary">
-                  <i class="bi bi-share-alt"></i>
+                  <i
+                    class="bi-share-fill"
+                    style="font-size: 2rem; color: #11dbcf"
+                  ></i>
                   <h3>Social Profiles</h3>
                   <ul
                     class="horizontal-list p-0 m-0"
