--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
       body {
         background: #000000; /* fallback for old browsers */
         background: -webkit-linear-gradient(
-          to right,
+          to left,
           #434343,
           #000000
         ); /* Chrome 10-25, Safari 5.1-6 */
         background: linear-gradient(
-          to right,
+          to left,
           #434343,
           #000000
         ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -1434,8 +1434,8 @@
               <div class="col-xs-12 col-sm-6 col-md-6 flex items-stretch mb-3">
                 <div class="card shadow bg-secondary">
                   <i
-                    class="bi-alt-fill"
-                    style="font-size: 2rem; color: #ffa76e"
+                    class="bi-geo-alt-fill"
+                    style="font-size: 2rem; color: var(--primary)"
                   ></i>
                   <h3>My Address</h3>
                   <p>A108 Adam Street, New York, NY 535022</p>
