--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       custom-element="amp-sidebar"
       src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
     ></script>
+    <!-- carousel -->
+    <script
+      async
+      custom-element="amp-carousel"
+      src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"
+    ></script>
     <script
       async
       custom-element="amp-accordion"
