--- a/index.html
+++ b/index.html
@@ -1437,48 +1437,67 @@
               <div class="bg-primary" style="height: 2px"></div>
             </div>
             <section>
-              <amp-carousel
-                width="100vw"
-                height="100vh"
-                controls=""
-                class="gallery-landing-wall block relative"
-              >
-                <div class="gallery-landing-wall-scroll relative">
+              <article class="row">
+                <div class="col-xs col-md-4 col-lg-3">
                   <figure
                     class="gallery-landing-image-wrapped gallery-landing-image-wrap"
                   >
-                    <a
-                      href="./gallery-inner.amp.html"
-                      class="gallery-landing-image-link"
-                    ></a>
-                    <figcaption
-                      class="gallery-landing-image-caption gallery-landing-image-caption-bottom gallery-landing-image-caption-extraleft gallery-landing-image-caption-content"
-                    >
-                      <h2 class="h4 regular">Modern Caesar</h2>
-                      <h3 class="h4 regular" role="author">Sylvia Johnson</h3>
-                      <a
-                        href="./gallery-inner.amp.html"
-                        class="gallery-landing-caption-link inline-block"
-                        >View Exhibit</a
-                      >
-                    </figcaption>
                     <div class="gallery-landing-image-transform">
                       <amp-img
                         width="8"
                         height="12"
+                        style="transform: rotate(-90deg)"
                         layout="responsive"
-                        noloading=""
-                        src="../img/gallery/chair.jpg"
-                        srcset="
-                ../img/gallery/chair.jpg 1x,
-                ../img/gallery/chair@2x.jpg 2x
-              "
-                        alt="wooden chair"
+                        src="eliah-girls-ict-award-3.jpeg"
+                        alt="Girls in ICT trainees"
                       ></amp-img>
                     </div>
+                    <figcaption class="text-secondary">
+                      Posing with trainees
+                    </figcaption>
                   </figure>
                 </div>
-              </amp-carousel>
+                <div class="col-xs col-md-4 col-lg-3">
+                  <figure
+                    class="gallery-landing-image-wrapped gallery-landing-image-wrap"
+                  >
+                    <div class="gallery-landing-image-transform">
+                      <amp-img
+                        width="8"
+                        height="12"
+                        style="transform: rotate(-90deg)"
+                        layout="responsive"
+                        noloading=""
+                        src="eliah-girls-ict-award-2.jpeg"
+                        alt="Girls in ICT award"
+                      ></amp-img>
+                    </div>
+                    <figcaption class="text-secondary">
+                      Girls in ICT award
+                    </figcaption>
+                  </figure>
+                </div>
+                <div class="col-xs col-md-4 col-lg-3">
+                  <figure
+                    class="gallery-landing-image-wrapped gallery-landing-image-wrap"
+                  >
+                    <div class="gallery-landing-image-transform">
+                      <amp-img
+                        width="8"
+                        height="12"
+                        style="transform: rotate(-90deg)"
+                        layout="responsive"
+                        noloading=""
+                        src="eliah-girls-ict-award.jpeg"
+                        alt="Girls in ICT certificate"
+                      ></amp-img>
+                    </div>
+                    <figcaption class="text-secondary">
+                      Girls in ICT Certificate
+                    </figcaption>
+                  </figure>
+                </div>
+              </article>
             </section>
           </amp-layout>
         </div>
