--- a/index.html
+++ b/index.html
@@ -318,6 +318,14 @@
         background: var(--primary);
         border: 2px solid var(--primary);
       }
+      .gallery-fixed-container {
+        position: relative;
+        width: 100%;
+        height: 300px;
+      }
+      amp-img.cover img {
+        object-fit: cover;
+      }
       @media (max-width: 500px) {
         #mega-menu {
           display: none;
@@ -1442,12 +1450,13 @@
                   <figure
                     class="gallery-landing-image-wrapped gallery-landing-image-wrap"
                   >
-                    <div class="gallery-landing-image-transform">
+                    <div class="gallery-fixed-container">
                       <amp-img
                         width="8"
                         height="12"
+                        class="cover"
                         style="transform: rotate(-90deg)"
-                        layout="responsive"
+                        layout="fill"
                         src="eliah-girls-ict-award-3.jpeg"
                         alt="Girls in ICT trainees"
                       ></amp-img>
@@ -1461,13 +1470,13 @@
                   <figure
                     class="gallery-landing-image-wrapped gallery-landing-image-wrap"
                   >
-                    <div class="gallery-landing-image-transform">
+                    <div class="gallery-fixed-container">
                       <amp-img
                         width="8"
                         height="12"
+                        class="cover"
                         style="transform: rotate(-90deg)"
-                        layout="responsive"
-                        noloading=""
+                        layout="fill"
                         src="eliah-girls-ict-award-2.jpeg"
                         alt="Girls in ICT award"
                       ></amp-img>
@@ -1481,13 +1490,13 @@
                   <figure
                     class="gallery-landing-image-wrapped gallery-landing-image-wrap"
                   >
-                    <div class="gallery-landing-image-transform">
+                    <div class="gallery-fixed-container">
                       <amp-img
                         width="8"
                         height="12"
+                        class="cover"
                         style="transform: rotate(-90deg)"
-                        layout="responsive"
-                        noloading=""
+                        layout="fill"
                         src="eliah-girls-ict-award.jpeg"
                         alt="Girls in ICT certificate"
                       ></amp-img>
