--- a/index.html
+++ b/index.html
@@ -1452,8 +1452,6 @@
                   >
                     <div class="gallery-fixed-container">
                       <amp-img
-                        width="8"
-                        height="12"
                         class="cover"
                         style="transform: rotate(-90deg)"
                         layout="fill"
@@ -1472,8 +1470,6 @@
                   >
                     <div class="gallery-fixed-container">
                       <amp-img
-                        width="8"
-                        height="12"
                         class="cover"
                         style="transform: rotate(-90deg)"
                         layout="fill"
@@ -1487,13 +1483,9 @@
                   </figure>
                 </div>
                 <div class="col-xs col-md-4 col-lg-3">
-                  <figure
-                    class="gallery-landing-image-wrapped gallery-landing-image-wrap"
-                  >
+                  <figure class="position-relative">
                     <div class="gallery-fixed-container">
                       <amp-img
-                        width="8"
-                        height="12"
                         class="cover"
                         style="transform: rotate(-90deg)"
                         layout="fill"
