--- a/index.html
+++ b/index.html
@@ -1459,9 +1459,7 @@
             <section>
               <article class="row">
                 <div class="col-xs col-md-4 col-lg-3">
-                  <figure
-                    class="gallery-landing-image-wrapped gallery-landing-image-wrap"
-                  >
+                  <figure class="m-0">
                     <div class="gallery-fixed-container">
                       <amp-img
                         class="cover"
@@ -1476,9 +1474,7 @@
                   </figure>
                 </div>
                 <div class="col-xs col-md-4 col-lg-3">
-                  <figure
-                    class="gallery-landing-image-wrapped gallery-landing-image-wrap"
-                  >
+                  <figure class="m-0">
                     <div class="gallery-fixed-container">
                       <amp-img
                         class="cover"
@@ -1493,7 +1489,7 @@
                   </figure>
                 </div>
                 <div class="col-xs col-md-4 col-lg-3">
-                  <figure class="position-relative">
+                  <figure class="m-0">
                     <div class="gallery-fixed-container">
                       <amp-img
                         class="cover"
