--- a/index.html
+++ b/index.html
@@ -1464,6 +1464,7 @@
                       <amp-img
                         class="cover"
                         layout="fill"
+                        style="min-width: 250px"
                         src="eliah-girls-ict-award-3.jpg"
                         alt="Girls in ICT trainees"
                       ></amp-img>
@@ -1479,6 +1480,7 @@
                       <amp-img
                         class="cover"
                         layout="fill"
+                        style="min-width: 250px"
                         src="eliah-girls-ict-award-2.jpg"
                         alt="Girls in ICT award"
                       ></amp-img>
@@ -1494,6 +1496,7 @@
                       <amp-img
                         class="cover"
                         layout="fill"
+                        style="min-width: 250px"
                         src="eliah-girls-ict-award.jpg"
                         alt="Girls in ICT certificate"
                       ></amp-img>
