--- a/index.html
+++ b/index.html
@@ -1447,65 +1447,52 @@
         </div>
         <!-- honors panel -->
         <div id="tabpanel6" role="tabpanel" aria-labelledby="honors" option>
-          <amp-layout
-            layout="container"
-            id="content"
-            class="gallery-base-content fit"
-          >
+          <amp-layout layout="container" id="content" class="w-100">
             <div class="inline-flex flex-column mb-3">
               <h2 style="margin-bottom: 0.25rem">Honors</h2>
               <div class="bg-primary" style="height: 2px"></div>
             </div>
             <section>
               <article class="row">
-                <div class="col-xs col-md-4 col-lg-3">
-                  <figure class="m-0">
-                    <div class="gallery-fixed-container">
-                      <amp-img
-                        class="cover"
-                        layout="fill"
-                        style="min-width: 250px"
-                        src="eliah-girls-ict-award-3.jpg"
-                        alt="Girls in ICT trainees"
-                      ></amp-img>
-                    </div>
-                    <figcaption class="text-secondary">
-                      Posing with trainees
-                    </figcaption>
-                  </figure>
-                </div>
-                <div class="col-xs col-md-4 col-lg-3">
-                  <figure class="m-0">
-                    <div class="gallery-fixed-container">
-                      <amp-img
-                        class="cover"
-                        layout="fill"
-                        style="min-width: 250px"
-                        src="eliah-girls-ict-award-2.jpg"
-                        alt="Girls in ICT award"
-                      ></amp-img>
-                    </div>
-                    <figcaption class="text-secondary">
-                      Girls in ICT award
-                    </figcaption>
-                  </figure>
-                </div>
-                <div class="col-xs col-md-4 col-lg-3">
-                  <figure class="m-0">
-                    <div class="gallery-fixed-container">
-                      <amp-img
-                        class="cover"
-                        layout="fill"
-                        style="min-width: 250px"
-                        src="eliah-girls-ict-award.jpg"
-                        alt="Girls in ICT certificate"
-                      ></amp-img>
-                    </div>
-                    <figcaption class="text-secondary">
-                      Girls in ICT Certificate
-                    </figcaption>
-                  </figure>
-                </div>
+                <figure class="col-xs col-md-4 col-lg-3 m-0">
+                  <div class="gallery-fixed-container">
+                    <amp-img
+                      class="cover"
+                      layout="fill"
+                      src="eliah-girls-ict-award-3.jpg"
+                      alt="Girls in ICT trainees"
+                    ></amp-img>
+                  </div>
+                  <figcaption class="text-secondary">
+                    Posing with trainees
+                  </figcaption>
+                </figure>
+                <figure class="col-xs col-md-4 col-lg-3 m-0">
+                  <div class="gallery-fixed-container">
+                    <amp-img
+                      class="cover"
+                      layout="fill"
+                      src="eliah-girls-ict-award-2.jpg"
+                      alt="Girls in ICT award"
+                    ></amp-img>
+                  </div>
+                  <figcaption class="text-secondary">
+                    Girls in ICT award
+                  </figcaption>
+                </figure>
+                <figure class="col-xs col-md-4 col-lg-3 m-0">
+                  <div class="gallery-fixed-container">
+                    <amp-img
+                      class="cover"
+                      layout="fill"
+                      src="eliah-girls-ict-award.jpg"
+                      alt="Girls in ICT certificate"
+                    ></amp-img>
+                  </div>
+                  <figcaption class="text-secondary">
+                    Girls in ICT Certificate
+                  </figcaption>
+                </figure>
               </article>
             </section>
           </amp-layout>
