--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,23 @@
                 <article
                   class="card shadow h-100"
                   style="background: rgba(204, 204, 204, 0.1)"
-                ></article>
+                >
+                  <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div> -->
+                  <h4>
+                    <a
+                      href="https://github.com/Eliah7/RLPO-Python"
+                      class="text-decoration-none"
+                      target="_blank"
+                      rel="nofollow noreferrer"
+                      >Reinforcement Learning for Power Grid Optimization
+                    </a>
+                  </h4>
+                  <p>
+                    A project involving the use of reinforcement learning
+                    algorithms to create agents capable of acting optimally in a
+                    power grid environment.
+                  </p>
+                </article>
               </div>
             </section>
           </amp-layout>
