--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
         font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
           sans-serif;
       }
-      div {
+      div,
+      article {
         box-sizing: border-box;
       }
       /* Styles for the flex layout based tabs */
@@ -283,6 +284,27 @@
         padding: 2rem;
         width: 100%;
         border-radius: 0.25rem;
+      }
+      .icon {
+        border-radius: 0.25rem;
+        background-color: var(--primary);
+        height: 4rem;
+        width: 4rem;
+        padding: 1rem;
+        margin: auto;
+      }
+      .icon i {
+        color: white;
+        font-size: 2rem;
+      }
+      .project:hover {
+        background-color: var(--primary);
+      }
+      .project:hover .icon {
+        background-color: var(--white);
+      }
+      .project:hover .icon i {
+        background-color: var(--primary);
       }
       amp-img {
         background-color: gray;
@@ -1393,32 +1415,94 @@
           <amp-layout
             layout="container"
             style="background: rgba(0, 0, 0, 0.8)"
-            class="w-100"
+            class="px-3 w-100"
           >
             <div class="inline-flex flex-column mb-3">
               <h2 style="margin-bottom: 0.25rem">Projects</h2>
               <div class="bg-primary" style="height: 2px"></div>
             </div>
             <section class="row">
-              <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 m-0">
+              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3">
                 <article
-                  class="card shadow h-100"
+                  class="project card shadow h-100"
                   style="background: rgba(204, 204, 204, 0.1)"
                 >
-                  <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div> -->
-                  <h4>
+                  <div class="icon"><i class="bi-node-plus"></i></div>
+                  <h3>
                     <a
                       href="https://github.com/Eliah7/RLPO-Python"
-                      class="text-decoration-none"
+                      class="text-white"
                       target="_blank"
                       rel="nofollow noreferrer"
                       >Reinforcement Learning for Power Grid Optimization
                     </a>
-                  </h4>
+                  </h3>
                   <p>
                     A project involving the use of reinforcement learning
                     algorithms to create agents capable of acting optimally in a
                     power grid environment.
+                  </p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3">
+                <article
+                  class="project card shadow h-100"
+                  style="background: rgba(204, 204, 204, 0.1)"
+                >
+                  <div class="icon"><i class="bi-receipt"></i></div>
+                  <h3>
+                    <a
+                      href="https://smartstock.co.tz/"
+                      class="text-white"
+                      target="_blank"
+                      rel="nofollow noreferrer"
+                      >SmartStock
+                    </a>
+                  </h3>
+                  <p>
+                    Web application that helps businesses manage their stock,
+                    sales and accounts.
+                  </p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3">
+                <article
+                  class="project card shadow h-100"
+                  style="background: rgba(204, 204, 204, 0.1)"
+                >
+                  <div class="icon"><i class="bi-phone"></i></div>
+                  <h3>
+                    <a
+                      class="text-white"
+                      target="_blank"
+                      rel="nofollow noreferrer"
+                      >Ubongo Kids App
+                    </a>
+                  </h3>
+                  <p>
+                    Mobile App for children to watch and consume content from
+                    ubongo kids.
+                  </p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3">
+                <article
+                  class="project card shadow h-100"
+                  style="background: rgba(204, 204, 204, 0.1)"
+                >
+                  <div class="icon"><i class="bi-ui-radios"></i></div>
+                  <h3>
+                    <a
+                      href="https://lcds-940d1.web.app/"
+                      class="text-white"
+                      target="_blank"
+                      rel="nofollow noreferrer"
+                      >Lung Cancer Detection System
+                    </a>
+                  </h3>
+                  <p>
+                    A web application embedded with a deep learning model to
+                    detect presence of lung cancer in MRI images.
                   </p>
                 </article>
               </div>
