--- a/index.html
+++ b/index.html
@@ -1552,6 +1552,54 @@
                 </p>
               </div>
             </section>
+            <!-- certificates section -->
+            <section>
+              <div class="inline-flex flex-column mb-3">
+                <h2 style="margin-bottom: 0.25rem">Certificates</h2>
+                <div class="bg-primary" style="height: 2px"></div>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">
+                  University of Dar es Salaam
+                </h4>
+                <caption>
+                  Bachelor of Science in Computer Science
+                </caption>
+                <p>
+                  <em>September, 2016 - 2019</em>
+                  &ensp;|&ensp;
+                  <small>Dar es Salaam</small>
+                </p>
+                <dl>
+                  <dd>GPA 4.1.</dd>
+                </dl>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">Kibaha Secondary School</h4>
+                <caption>
+                  A-Level | ACSEE
+                </caption>
+                <p>
+                  <em>2014 - 2016</em>
+                  &ensp;|&ensp;
+                  <small>Pwani</small>
+                </p>
+                <dl style="line-height: 24px">
+                  <dd>Physics, Chemistry and Mathematics.</dd>
+                </dl>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">Thomas More Machrina</h4>
+                <caption>
+                  O-Level | CSEE
+                </caption>
+                <p>
+                  <em>2011 - 2014</em>
+                  &ensp;|&ensp;
+                  <small>Dar es Salaam</small>
+                </p>
+              </div>
+            </section>
           </amp-layout>
         </div>
         <!-- honors panel -->
@@ -1732,7 +1780,7 @@
       </amp-selector>
       <amp-social-share type="system" aria-label="Share"></amp-social-share>
     </main>
-    <footer class="bg-primary">
+    <footer class="">
       <div class="container py-3">
         <div class="text-white text-center">
           <small
