--- a/index.html
+++ b/index.html
@@ -1560,44 +1560,126 @@
               </div>
               <div class="resume-item">
                 <h4 class="text-primary uppercase">
-                  University of Dar es Salaam
+                  Exploratory Data Analysis with Python and Pandas
                 </h4>
                 <caption>
-                  Bachelor of Science in Computer Science
+                  Coursera Project Network
                 </caption>
                 <p>
-                  <em>September, 2016 - 2019</em>
-                  &ensp;|&ensp;
-                  <small>Dar es Salaam</small>
+                  <em>Nov 17, 2020</em>
                 </p>
                 <dl>
-                  <dd>GPA 4.1.</dd>
+                  <dd>An online non-credit course offered through Coursera.</dd>
                 </dl>
               </div>
               <div class="resume-item">
-                <h4 class="text-primary uppercase">Kibaha Secondary School</h4>
+                <h4 class="text-primary uppercase">
+                  Intermediate Machine Learning
+                </h4>
                 <caption>
-                  A-Level | ACSEE
+                  Kaggle
                 </caption>
                 <p>
-                  <em>2014 - 2016</em>
-                  &ensp;|&ensp;
-                  <small>Pwani</small>
+                  <em>June 3, 2020</em>
                 </p>
                 <dl style="line-height: 24px">
-                  <dd>Physics, Chemistry and Mathematics.</dd>
+                  <dd>An online non-credit course.</dd>
                 </dl>
               </div>
               <div class="resume-item">
-                <h4 class="text-primary uppercase">Thomas More Machrina</h4>
+                <h4 class="text-primary uppercase">
+                  Introduction to Machine Learning
+                </h4>
                 <caption>
-                  O-Level | CSEE
+                  Kaggle
                 </caption>
                 <p>
-                  <em>2011 - 2014</em>
-                  &ensp;|&ensp;
-                  <small>Dar es Salaam</small>
+                  <em>May 28, 2020</em>
                 </p>
+                <dl style="line-height: 24px">
+                  <dd>An online non-credit course.</dd>
+                </dl>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">Deep Learning</h4>
+                <caption>
+                  DeepLearning.AI
+                </caption>
+                <p>
+                  <em>June 23, 2019</em>
+                </p>
+                <dl style="line-height: 24px">
+                  <dd>A 5-course specialization.</dd>
+                </dl>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">Sequence Models</h4>
+                <caption>
+                  Coursera Project Network
+                </caption>
+                <p>
+                  <em>June 23, 2019</em>
+                </p>
+                <dl style="line-height: 24px">
+                  <dd>An online non-credit course offered through Coursera.</dd>
+                </dl>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">
+                  Convolutional Neural Networks
+                </h4>
+                <caption>
+                  DeepLearning.AI
+                </caption>
+                <p>
+                  <em>May 6, 2019</em>
+                </p>
+                <dl style="line-height: 24px">
+                  <dd>An online non-credit course offered through Coursera.</dd>
+                </dl>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">
+                  Structuring Machine Learning Projects
+                </h4>
+                <caption>
+                  Coursera Project Network
+                </caption>
+                <p>
+                  <em>Apr 10, 2019</em>
+                </p>
+                <dl style="line-height: 24px">
+                  <dd>An online non-credit course offered through Coursera.</dd>
+                </dl>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">
+                  Improving Deep Neural Networks: Hyperparameter tuning,
+                  Regularization and Optimization
+                </h4>
+                <caption>
+                  Coursera Project Network
+                </caption>
+                <p>
+                  <em>Apr 3, 2019</em>
+                </p>
+                <dl style="line-height: 24px">
+                  <dd>An online non-credit course offered through Coursera.</dd>
+                </dl>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">
+                  Neural Networks and Deep learning
+                </h4>
+                <caption>
+                  Coursera Project Network
+                </caption>
+                <p>
+                  <em>March 20, 2019</em>
+                </p>
+                <dl style="line-height: 24px">
+                  <dd>An online non-credit course offered through Coursera.</dd>
+                </dl>
               </div>
             </section>
           </amp-layout>
