--- a/index.html
+++ b/index.html
@@ -846,6 +846,7 @@
             <a href="" class="text-decoration-none"><b>Eliah Mbwilo</b></a>
           </amp-layout>
           <amp-selector
+            id="mega-menu"
             class="tabs-with-selector col-md-8 col-lg-6 row around-xs"
             role="tablist"
             on="select:myTabPanels.toggle(index=event.targetOption, value=true)"
