--- a/index.html
+++ b/index.html
@@ -913,10 +913,9 @@
         </nav>
       </amp-layout>
     </header>
-    <amp-sidebar id="sidebar" layout="nodisplay">
+    <amp-sidebar id="sidebar" style="background: rgba(0, 0, 0, 0.9)" layout="nodisplay">
       <amp-selector
         class="tabs-with-selector"
-        style="background: rgba(0, 0, 0, 0.8)"
         role="tablist"
         on="select:myTabPanels.toggle(index=event.targetOption, value=true)"
         keyboard-select-mode="focus"
