--- a/index.html
+++ b/index.html
@@ -913,7 +913,11 @@
         </nav>
       </amp-layout>
     </header>
-    <amp-sidebar id="sidebar" style="background: rgba(0, 0, 0, 0.9)" layout="nodisplay">
+    <amp-sidebar
+      id="sidebar"
+      style="background: rgba(0, 0, 0, 0.9)"
+      layout="nodisplay"
+    >
       <amp-selector
         class="tabs-with-selector"
         role="tablist"
